Add frontend deployment to workflow

--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -20,3 +20,4 @@ jobs:
         script: |
           cd /opt/octobot && git pull
           sudo systemctl restart octobot
+          cd /opt/octobot/client && npm run deploy
