--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -10,7 +10,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: executing remote ssh commands using password
+    - name: Deploy to Remote Server via SSH
       uses: appleboy/ssh-action@v0.1.8
       with:
         host: ${{ secrets.HOST }}
